# clapme

./: .travis.yml  Cargo.toml  README.md
clapme_derive/: Cargo.toml
clapme_derive/src/: lib.rs
opt-derive/: Cargo.toml  LICENSE-MIT
opt-derive/src/: lib.rs
src/: guide.rs  lib.rs
tests/: bool-and-option-in-substruct.rs  create-guide.rs  deeply-nested-with-underscores.rs  enum-required-by-optional-struct.rs  enum.rs  flags.rs  generic.rs  nested.rs  only-one-variant.rs  options.rs  phantom.rs  primitive.rs  tuple-struct.rs  underscore-in-optional-field.rs  unit-struct.rs
