[package]
name = "clapme"
version = "0.0.1"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Parse command line arguments by defining a struct."
repository = "https://github.com/droundy/clapme"
keywords = ["clap", "cli", "derive"]
categories = ["command-line-interface"]
license = "Apache-2.0/MIT"
readme = "README.md"

[features]

# [badges]
# travis-ci = { repository = "droundy/clapme" }

[dependencies]
clap = "2.32"
opt-derive = { path = "opt-derive", version = "0.0.1" }

[workspace]
