[package]
name = "clapme"
version = "0.1.15"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Parse command line arguments by defining a struct."
repository = "https://github.com/droundy/clapme"
keywords = ["clap", "cli", "parse", "args", "argument"]
categories = ["command-line-interface"]
license = "Apache-2.0/MIT"
readme = "README.md"

[features]

[badges]
travis-ci = { repository = "droundy/clapme" }

[dependencies]
clap = "2.32"
clapme_derive = { path = "clapme_derive", version = "0.1.10" }
meval = "0.1.0"

[workspace]
