[package]
name = "clapme_derive"
version = "0.1.5"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Parse command line arguments by defining a struct, derive crate."
repository = "https://github.com/daveroundy/clapme"
keywords = ["clap", "cli", "derive"]
categories = ["command-line-interface"]
license = "Apache-2.0/MIT"

[dependencies]
syn = "0.14"
quote = "0.6"
proc-macro2 = "0.4"

[lib]
proc-macro = true
